--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "expo": {
-    "name": "myapp2",
-    "slug": "myapp2",
+    "name": "NoteList",
+    "slug": "NoteList",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "sdkVersion": "40.0.0",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -17,16 +18,16 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.list.notelist",
+      "buildNumber": "1.0.0"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+      "package": "com.list.notelist",
+      "versionCode": 1
+    }
     },
     "web": {
       "favicon": "./assets/favicon.png"
     }
-  }
 }
+
